--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,26 @@
 body {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   color: #fcd462;
   text-shadow: 2px 2px #41586d;
 
   font-family: "Courier New", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(to right bottom, rgb(148, 49, 150), rgb(171, 140, 28));
+
+  background: linear-gradient(to right bottom, rgb(148, 49, 150), rgb(171, 140, 28)) fixed;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/* colors
+#42596d
+#e5eae6
+#fbd363
+
+#aba16c
+#8c9ca8
+#fbe29a */
