add react router

--- a/src/components/imageRecognition/ImageRecognition.css
+++ b/src/components/imageRecognition/ImageRecognition.css
@@ -1,9 +1,11 @@
-
-.bounding-box{
-    position: absolute;
-    box-shadow: 0 0 0 3px #fbd363;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    cursor: pointer;
+.bounding-box {
+  position: absolute;
+  box-shadow: 0 0 0 3px #fbd363;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  cursor: pointer;
+}
+.none {
+  display: none;
 }
